--- a/app/assets/scss/objects/_info.scss
+++ b/app/assets/scss/objects/_info.scss
@@ -13,8 +13,7 @@
 		width: 100%;
 		font-size: 2.5em;
 		text-transform: uppercase;
-		margin-bottom: 1em;
-		line-height: 1;
+		margin-bottom: .5em;
 	}
 	.faq__question {
 		display: inline-block;
@@ -33,7 +32,7 @@
 .btn--back {
 	position: absolute;
 	left: .5em;
-	top: -.5em;
+	top: 0;
 	text-decoration: underline;
 }
 
