--- a/app/assets/scss/objects/_preview.scss
+++ b/app/assets/scss/objects/_preview.scss
@@ -12,24 +12,24 @@
 	}
 }
 
+.background {
+	background: $secondary;
+	@extend %clearfix;
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
+	z-index: -1;
+}
+
 .resume {
 	margin: 0 auto;
 	padding: 1em;
 	background: white;
 	max-width: 960px;
-	&:before {
-		content: "";
-		background: $secondary;
-		@extend %clearfix;
-		position: fixed;
-		top: 0;
-		bottom: 0;
-		left: 0;
-		right: 0;
-		height: 100%;
-		width: 100%;
-		z-index: -1;
-	}
 	@include bp(medium) {
 		padding: 4em;
 		margin: 2em auto;
