--- a/app/assets/scss/base/_animation.scss
+++ b/app/assets/scss/base/_animation.scss
@@ -6,45 +6,45 @@
 	transition: all .15s;
 }
 
-/* Force scrollbar on all pages */
-html {
-  overflow-y: scroll;
+//Home Animation
+.transition--enter .home {
+  opacity: 0.01;
 }
-
-//Generic Animation
-.transition--enter,
-.transition--leave.is-active {
-  opacity: 0; }
-.transition--leave,
-.transition--enter.is-active {
-  opacity: 1; }
-
+.transition--enter.is-active .home {
+  opacity: 1;
+	transition: all .4s ease-in-out;
+}
+.transition--enter .home__text {
+  opacity: 0.01;
+}
+.transition--enter.is-active .home__text {
+  opacity: 1;
+	transition: all .4s ease-in-out;
+}
 
 //Info Animation
 .transition--enter .faq {
-  //transform: translate3d(0, -50px, 0);
-  opacity: 0; }
+  opacity: 0.01;
+}
 .transition--enter.is-active .faq {
-  transition: transform .5s ease-in-out, opacity .35s ease-in-out;
-  //transform: translate3d(0, 0, 0);
-  opacity: 1; }
-
+  opacity: 1;
+	transition: all .4s ease-in-out;
+}
 
 //Create Animation
 .transition--enter .resume-form {
-  //transform: translate3d(0, 50px, 0);
-  opacity: 0; }
+  opacity: 0.01;
+}
 .transition--enter.is-active .resume-form {
-  transition: transform .5s ease-in-out, opacity .35s ease-in-out;
-  //transform: translate3d(0, 0, 0);
-  opacity: 1; }
+  opacity: 1;
+	transition: all .4s ease-in-out;
+}
 
-
-	//Preivew Animation
+//Preivew Animation
 .transition--enter .resume {
-  //transform: translate3d(0, 50px, 0);
-  opacity: 0; }
+  opacity: 0.01;
+}
 .transition--enter.is-active .resume {
-  transition: transform .5s ease-in-out, opacity .35s ease-in-out;
-  //transform: translate3d(0, 0, 0);
-  opacity: 1; }
+  opacity: 1;
+	transition: all .4s ease-in-out;
+}
