--- a/app/assets/scss/base/_animation.scss
+++ b/app/assets/scss/base/_animation.scss
@@ -2,7 +2,7 @@
  *  Animation  *
  * ------- */
 
-.btn--remove, .resume-form li, .nav a, .btn, .faq a, .btn--back, .resume a {
+.btn--remove, .resume-form li, .nav a, .btn, .faq a, .btn--back, .resume a, .incomplete, .incomplete a {
 	transition: all .15s;
 }
 
