--- a/app/assets/scss/base/_btn.scss
+++ b/app/assets/scss/base/_btn.scss
@@ -3,21 +3,15 @@
  * ------- */
 
 button {
- border:none;
+ border: none;
  -webkit-appearance: none;
  background: none;
+ margin: 0;
+ padding: 0;
  &:hover {
    cursor: pointer;
  }
-}
-
-.btn {
- text-align: center;
- border-radius: 0;
- text-decoration: none;
- padding: .75em;
- display: inline-block;
- &:active, &:focus {
+ &:focus {
    outline: 0;
  }
 }
