--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -20,9 +20,10 @@
 @import "base/_animation";
 
 //Objects
+@import "objects/_page";
 @import "objects/_home";
 @import "objects/_form";
 @import "objects/_nav";
 @import "objects/_preview";
-@import "objects/_info";
+@import "objects/_intro";
 @import "objects/_print";
