testing out a new mobile menu

--- a/app/assets/scss/objects/_intro.scss
+++ b/app/assets/scss/objects/_intro.scss
@@ -6,7 +6,12 @@
 	background-image: url(../../assets/images/rental-history.jpg);
 }
 
+
+
+
+
 .faq {
+	display: none;
 	position: relative;
 	max-width: 600px;
 	padding: 0 1em;
