--- a/app/assets/scss/objects/_nav.scss
+++ b/app/assets/scss/objects/_nav.scss
@@ -24,48 +24,30 @@
  		left: 0;
  		top: 0;
  		bottom: 0;
- 		background: lighten($base, 5%);
+ 		background: white;
  		z-index: 99;
  		padding: 4em 2em 0 3em;
+		border-right: 1px solid $secondary;
+		box-shadow: 0 0 0 1px rgba(0,0,0,0.1),0 2px 15px rgba(0,0,0,0.1);
 	@include bp(medium) {
 		width: 33%;
 		transform: translate3d(0,0,0);
+		box-shadow: none;
 	}
  	ul {
- 		float: left;
 		clear: both;
  		padding: 0;
+		margin: 0 auto;
+		max-width: 300px;
  	}
  	li {
  		margin-bottom: 1em;
 		clear: both;
- 		list-style: disc;
  	}
 	a {
 		text-decoration: none;
 	}
  }
-
- .toggle--active .nav {
- 	transform: translate3d(0,0,0);
- }
-
-.toggle__close {
-	color: darken($secondary,35%);
-	position: absolute;
-	font-size: 1.5em;
-	top: .75em;
-	right: .75em;
-	@include bp(medium) {
-		display: none;
-	}
-	&:hover {
-		color: white;
-	}
-}
-
-
-
 
 .logo {
 	display: inline-block;
@@ -73,19 +55,15 @@
 	float: left;
 	text-decoration: none;
 	clear: both;
-	//background: darken($base, 1%);
-	//border: 2px solid darken($base, 1%);
-	padding: .25em;
+	color: $base;
 	h1 {
-		color: white;
-		//font-weight: bold;
+		color: $base;
 		line-height: 1.1;
 		font-size: 1.1em;
 	}
 	span {
 		float: left;
 		font-size: 2.25em;
-		color: white;
 		margin: 0 .25em 0 0;
 	}
 	&:hover {
@@ -105,72 +83,86 @@
 	}
 }
 
+//Fancy Toggle Button
 
 
 .toggle {
-	position: relative;
-	float: right;
-	margin-right: 1em;
-	line-height: 50px;
+	display: block;
+	position: absolute;
+	right: 1em;
+	top: 11px;
+  width: 26px;
+	height: 28px;
 	@include bp(medium) {
 		display: none;
 	}
-	span {
-		position: absolute;
-		background: $base;
-		display: block;
-		transition: all 300ms ease out;
-		-webkit-transition: all 300ms ease-out;
-		transform-origin: 50% 50%;
-		-webkit-transform-origin: 50% 50%;
-		transform: rotate(0deg);
-		-webkit-transform: rotate(0deg);
-	}
-	&:hover {
-		color: gray;
-		span {
-			background: gray;
-		}
+	&:hover span,
+	&:hover span:before,
+	&:hover span:after {
+		background: lighten($base, 50%);
 	}
 }
 
-.horizontal {
-	top: 24px;
-	left: -14px;
-	width: 9px;
-	height: 1px
+.toggle span, .toggle span:before, .toggle span:after {
+  cursor: pointer;
+  height: 2px;
+  width: 25px;
+  background: $base;
+  position: absolute;
+  display: block;
+  content: '';
+}
+.toggle span:before {
+  top: -7px;
+}
+.toggle span:after {
+  bottom: -7px;
 }
 
-.vertical {
-	top: 20px;
-	left: -10px;
-	width: 1px;
-	height: 9px
+.toggle span, .toggle span:before, .toggle span:after {
+  transition: all 200ms ease-in-out;
+}
+.toggle--active .toggle span {
+  background-color: white;
+}
+.toggle--active .toggle span:before, .toggle--active .toggle span:after {
+  top: 0;
+}
+.toggle--active .toggle span:before {
+  transform: rotate(45deg);
+}
+.toggle--active .toggle span:after {
+  transform: rotate(-45deg);
 }
 
-.toggle--active .vertical{
-	opacity: 0;
-	height: 1px;
-}
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.toggle--active .nav {
+ 	transform: translate3d(0,0,0);
+ }
 
 //Nav Buttons
-.btn--action {
-  color: darken($secondary,35%);
+.btn--nav {
+  color: lighten($base, 50%);
 	position: relative;
 }
 
-.btn--action--active {
+.btn--nav--active {
 	//background: $highlight;
-	color: white;
-}
-
-.no-touchevents .btn--action:hover {
-	//color: $highlight;
-}
-
-.no-touchevents .btn--action--active:hover {
-  //background: darken($highlight, 5%);
-	//color: white;
+	color: $base;
 }
