--- a/app/assets/scss/objects/_page.scss
+++ b/app/assets/scss/objects/_page.scss
@@ -43,3 +43,16 @@
 	transform: translateY(-50%);
 	z-index: 99;
 }
+
+.lable--summary {
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+
+.fieldset {
+  margin: 0 auto;
+  padding: 2.5em 1em;
+  text-align: center;
+}
