--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -22,6 +22,8 @@
 //Objects
 @import "objects/_page";
 @import "objects/_home";
+@import "objects/_summary";
+
 @import "objects/_form";
 @import "objects/_nav";
 @import "objects/_preview";
