--- a/app/assets/scss/base/_typography.scss
+++ b/app/assets/scss/base/_typography.scss
@@ -45,12 +45,12 @@ body, p, input, textarea, select, button, select, option, textarea  {
 .icon-cross:before {
   content: "\e900";
 }
-.icon-menu:before {
-  content: "\e901";
-}
 .icon-resume:before {
   content: "\e926";
 }
 .icon-print:before {
   content: "\e903";
+}
+.icon-preview:before {
+  content: "\e906";
 }
