--- a/app/assets/scss/objects/_form.scss
+++ b/app/assets/scss/objects/_form.scss
@@ -50,25 +50,20 @@
   margin-bottom: 0 auto;
   padding-bottom: 2em;
   max-width: 600px;
-}
-
-.fieldset {
-  margin: 0 auto;
-  padding: 2.5em 0 0;
-  text-align: center;
+  color: white;
 }
 
 .input, .select, .textarea {
   padding: .5em;
   font-size: 1em;
+  border-radius: 2px;
   -webkit-appearance: none;
   -moz-appearance:    none;
   appearance:         none;
   resize: none;
   outline: none;
-  border-radius: 0;
   border: none;
-  background: $secondary!important;
+  background: white!important;
 }
 
 .input, .select {
@@ -116,15 +111,6 @@
   @include bp(medium) {
     margin-bottom: 0!important;
   }
-}
-
-//Summary
-.textarea--summary {
-  height: 400px;
-  width: 100%;
-  max-width: 600px;
-  margin: 0 auto;
-  padding: .5em 1em;
 }
 
 //Rental History
@@ -277,6 +263,7 @@
 }
 
 .btn--submit {
+  border-radius: 2px;
   @include span-columns(12);
   background: $highlight;
   color: white;
