--- a/app/assets/scss/objects/_preview.scss
+++ b/app/assets/scss/objects/_preview.scss
@@ -2,31 +2,8 @@
  *   Resume Preview  *
  * ----------------- */
 
-.container {
-	margin: 5em auto 1em;
-	max-width: 960px;
-	padding: 0 1em;
-	@include bp(medium) {
-		margin: 6em auto 2em;
-		padding: 0 2em;
-	}
-}
-
-.background {
-	background: $secondary;
-	@extend %clearfix;
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	height: 100%;
-	width: 100%;
-	z-index: -1;
-}
-
 .resume {
-	margin: 0 auto;
+	margin: 1em;
 	padding: 1em;
 	background: white;
 	max-width: 960px;
