--- a/app/assets/scss/_vars.scss
+++ b/app/assets/scss/_vars.scss
@@ -4,6 +4,7 @@
 
 //Colors
 $base: #3e3e3e; // Dark Gray
-$secondary: #f2f2f2; // Light Gray 
-$highlight: #E8C273; //Yellow
+$secondary: #f2f2f2; // Light Gray
+$tertiary: #f7ecbb;
+$highlight: #7eccf4; //Yellow
 $warning: #ef5636; // Red
