Removing the colors and tweaking the margins and padding

--- a/app/assets/scss/_vars.scss
+++ b/app/assets/scss/_vars.scss
@@ -5,6 +5,6 @@
 //Colors
 $base: #3e3e3e; // Dark Gray
 $secondary: #f2f2f2; // Light Gray
-$tertiary: #f7ecbb;
-$highlight: #7eccf4; //Yellow
+$tertiary: #959391;
+$highlight: #c3e8f4;; //
 $warning: #ef5636; // Red
