--- a/app/assets/scss/base/_animation.scss
+++ b/app/assets/scss/base/_animation.scss
@@ -16,6 +16,11 @@
 	-webkit-transition: all 150ms ease-in;
 }
 
+.page__link {
+	transition: all 150ms ease-in;
+	-webkit-transition: all 150ms ease-in;
+}
+
 
 
 
